// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiMarkup => ADF Formatters - deleted should be a deleted mark and not a table if the character is a pipe 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "|",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should detect deleted mark and ignoring the invalid closing symbol 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "deleted-deleted",
          "type": "text",
        },
        Object {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should detect deleted mark at beginning of the line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "deleted",
          "type": "text",
        },
        Object {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should detect deleted mark at end of the input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "deleted",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should detect deleted mark at end of the line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "deleted",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "another line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should detect deleted mark at in between of the line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "deleted",
          "type": "text",
        },
        Object {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should detect deleted mark surrounded by non alphanumeric characters 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a (",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": "deleted",
          "type": "text",
        },
        Object {
          "text": ") text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark if it is escaped 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a -deleted- text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark if the - is in a link format 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a -",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlass-ian.com",
              },
              "type": "link",
            },
          ],
          "text": "link",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark if there is a space after opening - 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a - deleted- text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark if there is a space before closing - 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a -deleted - text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark if there is no space before - 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a-deleted- text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark if there is not a space after closing - 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a -deleted-text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - deleted should not be a deleted mark surrounded by non-latin characters 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a 牛-deleted-牛 text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
